# unasked

./: .gitignore  LICENSE  README.md  pyproject.toml
src/unasked/: __init__.py  classifier.py  classify.py  cli.py  entities.py  ir.py  ledger.py  receipt.py  redact.py  render.py
src/unasked/adapters/: __init__.py  claude_code.py
tests/: test_classifier.py  test_classify.py  test_claude_code_adapter.py  test_cli.py  test_entities.py  test_ir.py  test_ledger.py  test_native_transcript.py  test_receipt.py  test_render.py
tests/fixtures/: cc-session-basic.jsonl  cc-session-multi-tool.jsonl  cc-session-with-error.jsonl  test-session-001.jsonl  test-session-002.jsonl  test-session-003.jsonl
