[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unasked"
version = "0.1.0"
description = "See what your agent did without being asked — a local receipt of one agent run."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
unasked = "unasked.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/unasked"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
